--- a/gdrive-auth.html
+++ b/gdrive-auth.html
@@ -26,10 +26,11 @@
     </style>
     <script>
       function getCodeFromUrl() {
-        var urlParams = new URLSearchParams(window.location.search);
-        var code = urlParams.get('code');
-        document.getElementById('auth-code').innerText = code;
-      }
+  console.log('getCodeFromUrl() function called.');
+  var urlParams = new URLSearchParams(window.location.search);
+  var code = urlParams.get('code');
+  document.getElementById('auth-code').innerText = code;
+}
       function copyCode() {
         var codeBox = document.getElementById('auth-code');
         var codeText = codeBox.innerText;
