--- a/gdrive-auth.html
+++ b/gdrive-auth.html
@@ -4,48 +4,66 @@
     <title>Google Drive Authorization Code</title>
     <style>
       body {
-        background: linear-gradient(to bottom, #0d47a1, #1e88e5);
+        background: linear-gradient(to bottom right, #FCE38A, #F38181);
+        font-family: Arial, sans-serif;
+        color: #333;
+        text-align: center;
+        margin: 0;
+        padding: 0;
+      }
+      h1 {
+        font-size: 36px;
+        margin-top: 50px;
+      }
+      p {
+        font-size: 24px;
+        margin-top: 30px;
+      }
+      #auth-code {
+        font-size: 24px;
+        font-weight: bold;
+        margin-top: 30px;
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 10px;
+        display: inline-block;
+      }
+      #copy-button {
+        background-color: #333;
+        border: none;
         color: #fff;
-        font-family: sans-serif;
-      }
-      .code-wrapper {
-        border: 1px solid #ccc;
-        background-color: #f9f9f9;
-        padding: 10px;
-        margin-bottom: 20px;
-        font-size: 16px;
-        font-family: monospace;
-        white-space: nowrap;
-        overflow: auto;
-      }
-      .copy-button {
-        font-size: 16px;
-        padding: 10px;
-        margin-top: 10px;
+        font-size: 20px;
+        margin-left: 10px;
+        border-radius: 10px;
+        padding: 10px 20px;
+        cursor: pointer;
       }
     </style>
-    <script>
-      function getCodeFromUrl() {
-  console.log('getCodeFromUrl() function called.');
-  var urlParams = new URLSearchParams(window.location.search);
-  var code = urlParams.get('code');
-  console.log('code:', code);
-  document.getElementById('auth-code').innerText = code;
-}
-      function copyCode() {
-        var codeBox = document.getElementById('auth-code');
-        var codeText = codeBox.innerText;
-        navigator.clipboard.writeText(codeText);
-        alert('Code copied to clipboard!');
-      }
-    </script>
   </head>
   <body onload="getCodeFromUrl()">
     <h1>Google Drive Authorization Code</h1>
     <p>Your authorization code is:</p>
-    <div class="code-wrapper">
+    <div>
       <span id="auth-code"></span>
+      <button id="copy-button" onclick="copyToClipboard()">Copy</button>
     </div>
-    <button class="copy-button" onclick="copyCode()">Copy Code</button>
+    <script>
+      function getCodeFromUrl() {
+        var urlParams = new URLSearchParams(window.location.search);
+        var code = urlParams.get('code');
+        document.getElementById('auth-code').innerText = code;
+      }
+
+      function copyToClipboard() {
+        var copyText = document.getElementById("auth-code");
+        var textArea = document.createElement("textarea");
+        textArea.value = copyText.innerText;
+        document.body.appendChild(textArea);
+        textArea.select();
+        document.execCommand("Copy");
+        textArea.remove();
+        alert("Code copied to clipboard!");
+      }
+    </script>
   </body>
 </html>
