--- a/gdrive-auth/index.html
+++ b/gdrive-auth/index.html
@@ -39,6 +39,13 @@
         padding: 10px 20px;
         cursor: pointer;
       }
+      div {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 30px;
+      }
     </style>
   </head>
   <body onload="getCodeFromUrl()">
