--- a/gdrive-auth/index.html
+++ b/gdrive-auth/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
       body {
-        background: radial-gradient(circle at center, #FF0000, #FFC0CB);
+        background: linear-gradient(to bottom right, #FF0000, #FFC0CB);
         font-family: Arial, sans-serif;
         color: #333;
         text-align: center;
