--- a/gdrive-auth/index.html
+++ b/gdrive-auth/index.html
@@ -11,7 +11,24 @@
         text-align: center;
         margin: 0;
         padding: 0;
+        animation-name: animateGradient;
+        animation-duration: 10s;
+        animation-iteration-count: infinite;
+        animation-direction: alternate;
       }
+      
+      @keyframes animateGradient {
+        0% {
+          background-position: 0% 50%;
+        }
+        50% {
+          background-position: 100% 50%;
+        }
+        100% {
+          background-position: 0% 50%;
+        }
+      }
+      
       h1 {
         font-size: 36px;
         margin-top: 50px;
