--- a/gdrive-auth/index.html
+++ b/gdrive-auth/index.html
@@ -10,7 +10,7 @@
         text-align: center;
         margin: 0;
         padding: 0;
-        background: linear-gradient(circle at center, -45deg, #FF0000, #FFC0CB, #FFA07A, #87CEFA, #9400D3, #FF1493, #1E90FF);
+        background: gradient(-45deg, #FF0000, #FFC0CB, #FFA07A, #87CEFA, #9400D3, #FF1493, #1E90FF);
         background-size: 400% 400%;
         animation: gradient 15s ease infinite;
       }
