--- a/gdrive-auth/index.html
+++ b/gdrive-auth/index.html
@@ -10,8 +10,7 @@
         text-align: center;
         margin: 0;
         padding: 0;
-        background: gradient(-45deg, #FF0000, #FFC0CB, #FFA07A, #87CEFA, #9400D3, #FF1493, #1E90FF);
-        background-size: 400% 400%;
+        background: conic-gradient(red, orange, yellow, green, blue, purple, red);        background-size: 400% 400%;
         animation: gradient 15s ease infinite;
       }
       @keyframes gradient {
