--- a/gdrive-auth/index.html
+++ b/gdrive-auth/index.html
@@ -6,19 +6,12 @@
     <style>
       body {
         font-family: Arial, sans-serif;
+        color: #333;
+        text-align: center;
+        margin: 0;
+        padding: 0;
         background: conic-gradient(red, orange, yellow, green, blue, purple, red);        background-size: 400% 400%;
-        animation: gradient 15s ease infinite;
       }
-      @keyframes gradient {
-        0% {
-          background-position: 0% 50%;
-        }
-        50% {
-          background-position: 100% 50%;
-        }
-        100% {
-          background-position: 0% 50%;
-        }
       }
       h1 {
         font-size: 36px;
