--- a/gdrive-auth/index.html
+++ b/gdrive-auth/index.html
@@ -10,7 +10,7 @@
         text-align: center;
         margin: 0;
         padding: 0;
-        background: conic-gradient(red, orange, yellow, green, blue, purple, red);        background-size: 400% 400%;
+        background: #0000ff;
       }
       }
       h1 {
