--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -7,5 +8,7 @@
 <body>
     <h1>DRIVE TALK MM</h1>
     <p>This project is hosted on <a href="https://www.github.com/BotTutorials/drivetalkmm">GitHub</a></p>
+    <p>For our privacy policy, please visit <a href="https://drivetalkmm.netlify.app/privacy">here</a>.</p>
 </body>
-</html>%
+
+</html>
