--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>DRIVE TALK MM</h1>
     <p>This project is hosted on <a href="https://www.github.com/BotTutorials/drivetalkmm">GitHub</a></p>
+
+    <!-- Privacy Policy Link -->
     <p>For our privacy policy, please visit <a href="https://drivetalkmm.netlify.app/privacy">here</a>.</p>
 </body>
 
