--- a/gdrive-auth.html
+++ b/gdrive-auth.html
@@ -1,78 +1,32 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Google Drive Authorization Code</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        color: #333;
-        text-align: center;
-        margin: 0;
-        padding: 0;
-        background: #87CEEB;
-      }
-      }
-      h1 {
-        font-size: 36px;
-        margin-top: 50px;
-      }
-      p {
-        font-size: 24px;
-        margin-top: 30px;
-      }
-      #auth-code {
-        font-size: 24px;
-        font-weight: bold;
-        margin-top: 30px;
-        background-color: #fff;
-        padding: 20px;
-        border-radius: 10px;
-        display: inline-block;
-      }
-      #copy-button {
-        background-color: #333;
-        border: none;
-        color: #fff;
-        font-size: 20px;
-        margin-left: 10px;
-        border-radius: 10px;
-        padding: 10px 20px;
-        cursor: pointer;
-      }
-      div {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin-top: 30px;
-      }
-    </style>
-  </head>
-  <body onload="getCodeFromUrl()">
-    <h1>Google Drive Authorization Code</h1>
-    <p>Your authorization code is:</p>
+<html lang="en">
+<head>
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Drive Talk Mm Remote Login</title>
+  <link rel="icon" href="https://telegra.ph/file/2245d4a2711b526e5295c.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="authcodestyles.css">
+  <script src="authcodescripts.js"></script>
+</head>
+<body onload="onload()">
+    <img
+        src="https://telegra.ph/file/2245d4a2711b526e5295c.png"
+        alt="Drive Talk Mm"
+        class="logo">
+    <h1>Sign in to the drive talk mm bot</h1>
+    <p>Enter the following verification code in bot. This is a credential <b>similar to your password</b> and should not be shared with others.</p>
     <div>
-      <span id="auth-code"></span>
-      <button id="copy-button" onclick="copyToClipboard()">Copy</button>
+        <code class="auth-code"></code>
     </div>
-    <script>
-      function getCodeFromUrl() {
-        var urlParams = new URLSearchParams(window.location.search);
-        var code = urlParams.get('code');
-        document.getElementById('auth-code').innerText = code;
-      }
-
-      function copyToClipboard() {
-        var copyText = document.getElementById("auth-code");
-        var textArea = document.createElement("textarea");
-        textArea.value = copyText.innerText;
-        document.body.appendChild(textArea);
-        textArea.select();
-        document.execCommand("Copy");
-        textArea.remove();
-        alert("Code copied to clipboard!");
-      }
-    </script>
-  </body>
+    <button class="copy" aria-live="assertive">Copy</button>
+    <div class="hint">
+        You can close this tab when you’re done.
+    </div>
+</body>
 </html>
