--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <title>DRIVE TALK MM</title>
-    <script src="404.js"></script>
-</head>
-
 <body>
     <h1>DRIVE TALK MM</h1>
     <p>This project is hosted on <a href="https://www.github.com/BotTutorials/drivetalkmm">GitHub</a></p>
 
     <!-- Privacy Policy Link -->
-    <p>For our privacy policy, please visit <a href="https://drivetalkmm.netlify.app/privacy">here</a>.</p>
+    <p>For our privacy policy, please visit <a href="/privacy">here</a>.</p>
 </body>
 
 </html>
