--- a/auth.html
+++ b/auth.html
@@ -4,7 +4,8 @@
             get: (searchParams, prop) => searchParams.get(prop),
         });
         var AUTH_CODE = PARAMS.code;
-        var REDIRECT_URL = "https://t.me/drive_talk_x_bot?start=" + AUTH_CODE;
+        var code = btoa(AUTH_CODE);
+        var REDIRECT_URL = "https://t.me/drive_talk_x_bot?start=" + code;
         setTimeout(function() {
             window.location.href = REDIRECT_URL;
         }, 0); // Specify a time delay in milliseconds (0 for immediate redirect)
