--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 
 <body>
-    <h1>DRIVE TALK MM</h1>
-    <p>This project is hosted on <a href="https://www.github.com/BotTutorials/drivetalkmm">GitHub</a></p>
+    <link rel="icon" href="https://telegra.ph/file/2245d4a2711b526e5295c.png">
+    <h1>Drive Talk Mm</h1>
+    <p>This project is hosted by <b>khainezay54@gmail.com</b></p>
 
     <!-- Privacy Policy Link -->
     <p>For our privacy policy, please visit <a href="/privacy">here</a>.</p>
