--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <body>
     <link rel="icon" href="https://telegra.ph/file/2245d4a2711b526e5295c.png">
+    <img
+        src="https://telegra.ph/file/2245d4a2711b526e5295c.png"
+        alt="Drive Talk Mm"
+        class="logo">
     <h1>Drive Talk Mm</h1>
     <p>This project is hosted by <b>khainezay54@gmail.com</b></p>
 
