--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
 
 <body>
     <link rel="icon" href="https://telegra.ph/file/2245d4a2711b526e5295c.png">
-    <h1>Drive Talk Mm</h1>
-    <img
-        src="favicon.ico"
-        alt="Drive Talk Mm"
-        class="logo">
+    <h1><img src="favicon.ico">Drive Talk Mm</h1>
+    
     <p>This project is hosted by <b>khainezay54@gmail.com</b></p>
 
     <!-- Privacy Policy Link -->
