--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <body>
     <link rel="icon" href="https://telegra.ph/file/2245d4a2711b526e5295c.png">
-    <h1><img src="favicon.ico">Drive Talk Mm</h1>
+    <h1><img src="https://telegra.ph/file/781a141a8cbd42115df50.png">Drive Talk Mm</h1>
     
     <p>This project is hosted by <b>khainezay54@gmail.com</b></p>
 
