--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <body>
     <link rel="icon" href="https://telegra.ph/file/401b18a0e3eca936a4af5.png">
+    <script src="authcodescripts.js"></script>
     <h1><img src="https://telegra.ph/file/d94c2da2e56022239b6c6.png">Drive Talk Mm</h1>
     
     <p>This project is hosted by <b>khainezay54@gmail.com</b></p>
