--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
-
+<head>
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="icon" href="https://telegra.ph/file/401b18a0e3eca936a4af5.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="authcodestyles.css">
+</head>
 <body>
-    <link rel="icon" href="https://telegra.ph/file/401b18a0e3eca936a4af5.png">
-    <script src="authcodescripts.js"></script>
     <h1><img src="https://telegra.ph/file/d94c2da2e56022239b6c6.png">Drive Talk Mm</h1>
     
     <p>This project is hosted by <b>khainezay54@gmail.com</b></p>
