--- a/privacy.html
+++ b/privacy.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="https://telegra.ph/file/401b18a0e3eca936a4af5.png">
     <title>Drive Talk Mm Privacy Policy</title>
   </head>
   <body>
