--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="authcodestyles.css">
 </head>
 <body>
-    <h1><img src="https://telegra.ph/file/d94c2da2e56022239b6c6.png">Drive Talk Mm</h1>
+    <h1><img src="https://telegra.ph/file/401b18a0e3eca936a4af5.png" width="26px" height="26px">Drive Talk Mm</h1>
     
     <p>This project is hosted by <b>khainezay54@gmail.com</b></p>
 
