--- a/privacy.html
+++ b/privacy.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1><b>Drive Talk Mm </b>Privacy Policy</h1>
-    <b><hr></b>
+    <hr size="5">
     <p>Drive Talk Mm (“We”) is committed to protecting your privacy. This policy explains how we collect, use, and share information collected from our open source application (the “App”).</p>
     <p><b>Information Collected</b></p>
     <p>The only information collected by the App is what is necessary to utilize the Google Drive API functionality. This includes credentials to access a user’s Google Drive account. No other personal information is collected.</p>
