--- a/privacy.html
+++ b/privacy.html
@@ -7,7 +7,7 @@
     <title>Drive Talk Mm Privacy Policy</title>
   </head>
   <body>
-    <h1><b>Drive Talk Mm </b>Privacy Policy</h1>
+    <h1><nobr><b>Drive Talk Mm </b>Privacy Policy</nobr></h1>
     <hr size="3px" color="black">
     <p>Drive Talk Mm (“We”) is committed to protecting your privacy. This policy explains how we collect, use, and share information collected from our open source application (the “App”).</p>
     <p><b>Information Collected</b></p>
