--- a/privacy.html
+++ b/privacy.html
@@ -7,19 +7,29 @@
     <title>Drive Talk Mm Privacy Policy</title>
   </head>
   <body>
-    <h1><nobr><b>Drive Talk Mm </b>Privacy Policy</nobr></h1>
-    <hr size="3px" color="black">
-    <p>Drive Talk Mm (“We”) is committed to protecting your privacy. This policy explains how we collect, use, and share information collected from our open source application (the “App”).</p>
-    <h2><b>Information Collected</b></h2>
-    <p>The only information collected by the App is what is necessary to utilize the Google Drive API functionality. This includes credentials to access a user’s Google Drive account. No other personal information is collected.</p>
-    <p>Google Drive API metrics like request counts and errors are also collected, but this data is anonymous and does not contain any information like account names or IP addresses that could identify individual users.</p>
-    <h2><b>Use of Information</b></h2>
-    <p>We do not use any personal information for marketing or other purposes. Credentials are only used to access a user’s Google Drive as needed for the functionality of the App. Google Drive API metrics help us monitor the health and performance of the App.</p>
-    <h2><b>Data Sharing</b></h2>
-    <p>We do not share any personal information with third parties. Anonymous Google Drive API metrics may be shared with the GitHub community to help improve the App.</p>
-    <h2><b>Security</b></h2>
-    <p>We prioritize security and take commercially reasonable steps to secure information collected. However, no method of transmission or electronic storage is 100% secure.</p>
-    <h2><b>Contact Info</b></h2>
-    <p>If you have any other questions, concerns, or requests pertaining to privacy, please contact the developer at khainezay54@gmail.com.</p>
+  <h1>Privacy Policy</h1>
+  <p>This privacy policy explains how we collect, use, and share information collected from our website (the "Website").</p>
+
+  <h2>Information Collected</h2>
+  <p>The only information we collect is what is necessary to operate the Website and provide our services. This includes:</p>
+  <ul>
+    <li>Your IP address</li>
+    <li>The pages you visit on our Website</li>
+    <li>The time and date of your visit</li>
+  </ul>
+
+  <h2>Use of Information</h2>
+  <p>We use the information we collect to improve the Website and provide you with a better user experience. We may also use your information to send you promotional emails or other communications, but you can unsubscribe from these communications at any time.</p>
+
+  <h2>Data Sharing</h2>
+  <p>We do not share any of your personal information with third parties without your consent.</p>
+
+  <h2>Security</h2>
+  <p>We take appropriate security measures to protect your information from unauthorized access, use, or disclosure.</p>
+
+  <h2>Contact Us</h2>
+  <p>If you have any questions about our privacy policy, please contact us at khainezay54@gmail.com</p>
   </body>
+</html>
+
 </html>
