--- a/privacy.html
+++ b/privacy.html
@@ -1,35 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="https://telegra.ph/file/401b18a0e3eca936a4af5.png">
-    <title>Drive Talk Mm Privacy Policy</title>
-  </head>
-  <body>
-  <h1>Privacy Policy</h1>
-  <p>This privacy policy explains how we collect, use, and share information collected from our website (the "Website").</p>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="https://telegra.ph/file/401b18a0e3eca936a4af5.png">
+  <title>Drive Talk Mm Privacy Policy</title>
+</head>
+<body>
+<h1>Privacy Policy</h1>
+<p>This privacy policy explains how we collect, use, and share information collected from our website (the "Website").</p>
 
-  <h2>Information Collected</h2>
-  <p>The only information we collect is what is necessary to operate the Website and provide our services. This includes:</p>
-  <ul>
-    <li>Your IP address</li>
-    <li>The pages you visit on our Website</li>
-    <li>The time and date of your visit</li>
-  </ul>
+<h2>Information Collected</h2>
+<p>The only information we collect is what is necessary to operate the Website and provide our services. This includes:</p>
+<ul>
+  <li>Your IP address</li>
+  <li>The pages you visit on our Website</li>
+  <li>The time and date of your visit</li>
+</ul>
 
-  <h2>Use of Information</h2>
-  <p>We use the information we collect to improve the Website and provide you with a better user experience. We may also use your information to send you promotional emails or other communications, but you can unsubscribe from these communications at any time.</p>
+<h2>Use of Information</h2>
+<p>We use the information we collect to improve the Website and provide you with a better user experience. We may also use your information to send you promotional emails or other communications, but you can unsubscribe from these communications at any time.</p>
 
-  <h2>Data Sharing</h2>
-  <p>We do not share any of your personal information with third parties without your consent.</p>
+<h2>Data Sharing</h2>
+<p>We do not share any of your personal information with third parties without your consent.</p>
 
-  <h2>Security</h2>
-  <p>We take appropriate security measures to protect your information from unauthorized access, use, or disclosure.</p>
+<h2>Security</h2>
+<p>We take appropriate security measures to protect your information from unauthorized access, use, or disclosure.</p>
 
-  <h2>Contact Us</h2>
-  <p>If you have any questions about our privacy policy, please contact us at khainezay54@gmail.com</p>
-  </body>
-</html>
+<h2>Contact Us</h2>
+<p>If you have any questions about our privacy policy, please contact us at khainezay54@gmail.com</p>
 
+<h2>Limited Usage of Restricted Scope Data</h2>
+
+<p>We use Google APIs to provide you with certain features of our app. If you choose to share restricted scope data with us through Google APIs, we will only use it to provide or improve user-facing features that are prominent from the requesting app's user interface. We will not use your restricted scope data for advertising or sell it to third parties.</p>
+
+<p>We may also transfer your restricted scope data to others if that transfer is (a) necessary to provide or improve user-facing features that are prominent from the requesting app's user interface, (b) to comply with applicable laws, or (c) a part of a merger, acquisition or sale of assets of the developer.</p>
+
+<p>If you have any questions about how we use your restricted scope data, please contact us at <b>khainezay54@gmail.com</b>.</p>
+</body>
 </html>
