--- a/privacy.html
+++ b/privacy.html
@@ -27,7 +27,7 @@
 <h2>Security</h2>
 <p>We take appropriate security measures to protect your information from unauthorized access, use, or disclosure.</p>
 
-<h2>Contact Us</h2>
+
 <p>If you have any questions about our privacy policy, please contact us at khainezay54@gmail.com</p>
 
 <h2>Limited Usage of Restricted Scope Data</h2>
@@ -35,7 +35,7 @@
 <p>We use Google APIs to provide you with certain features of our app. If you choose to share restricted scope data with us through Google APIs, we will only use it to provide or improve user-facing features that are prominent from the requesting app's user interface. We will not use your restricted scope data for advertising or sell it to third parties.</p>
 
 <p>We may also transfer your restricted scope data to others if that transfer is (a) necessary to provide or improve user-facing features that are prominent from the requesting app's user interface, (b) to comply with applicable laws, or (c) a part of a merger, acquisition or sale of assets of the developer.</p>
-
-<p>If you have any questions about how we use your restricted scope data, please contact us at <b>khainezay54@gmail.com</b>.</p>
+<h2>Contact Us</h2>
+<p>If you have any questions about how we use your restricted scope data and our privacy policy, please contact us at <b>khainezay54@gmail.com</b>.</p>
 </body>
 </html>
