--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p>This project is hosted by <b>khainezay54@gmail.com</b></p>
 
     <!-- Privacy Policy Link -->
-    <p>For our privacy policy, please visit <a href="/privacy">here</a>.</p>
+    <p>For our privacy policy, please visit <a href="https://www.drivetalkmm.tech/privacy">here</a>.</p>
 </body>
 
 </html>
