--- a/index.html
+++ b/index.html
@@ -13,8 +13,17 @@
   <link rel="stylesheet" href="authcodestyles.css">
 </head>
 <body>
-    <h1><img src="https://telegra.ph/file/401b18a0e3eca936a4af5.png" width="26px" height="26px">Drive Talk Mm</h1>
-    
+    #<h1><img src="https://telegra.ph/file/401b18a0e3eca936a4af5.png" width="26px" height="26px">Drive Talk Mm</h1>
+    <div class="container">
+    <div class="left">
+      <img id="logo" src="https://telegra.ph/file/401b18a0e3eca936a4af5.png" alt="logo">
+      <h3>Drive Talk Mm</h3>
+    </div>
+    <div class="right">
+      <button class="btn" role="button">Channel</button>
+      <button class="btn" role="button">Group</button>
+    </div>
+    </div>
     <p>This project is hosted by <b>khainezay54@gmail.com</b></p>
 
     <!-- Privacy Policy Link -->
