--- a/index.html
+++ b/index.html
@@ -13,21 +13,17 @@
   <link rel="stylesheet" href="authcodestyles.css">
 </head>
 <body>
-    <!h1><img src="https://telegra.ph/file/401b18a0e3eca936a4af5.png" width="26px" height="26px">Drive Talk Mm</h1>
     <div class="container">
-    <div class="left">
+    <div class="mid">
       <img id="logo" src="https://telegra.ph/file/401b18a0e3eca936a4af5.png" width="26px" height="26px" alt="logo">
       <h3>Drive Talk Mm</h3>
     </div>
     <div class="right">
       <button class="btn" role="button">Channel</button>
       <button class="btn" role="button">Group</button>
+      <button class="btn" role="button">Privacy</button>
     </div>
     </div>
-    <p>This project is hosted by <b>khainezay54@gmail.com</b></p>
-
-    <!-- Privacy Policy Link -->
-    <p>For our privacy policy, please visit <a href="https://www.drivetalkmm.tech/privacy">here</a>.</p>
 </body>
 
 </html>
