--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="authcodestyles.css">
+  <script src="script.js"></script>
 </head>
 <body>
     <div class="container">
@@ -19,9 +20,9 @@
       <h3>Drive Talk Mm</h3>
     </div>
     <div class="right">
-      <button class="btn" role="button">Channel</button>
-      <button class="btn" role="button">Group</button>
-      <button class="btn" role="button">Privacy</button>
+      <button class="btn" role="button" onclick="Channel()">Channel</button>
+      <button class="btn" role="button" onclick="Grouo()">Group</button>
+      <button class="btn" role="button" onclick="Privacy()">Privacy</button>
     </div>
     </div>
 </body>
