--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="right">
       <button class="btn" role="button" onclick="Channel()">Channel</button>
-      <button class="btn" role="button" onclick="Grouo()">Group</button>
+      <button class="btn" role="button" onclick="Group()">Group</button>
       <button class="btn" role="button" onclick="Privacy()">Privacy</button>
     </div>
     </div>
