--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="icon" href="https://telegra.ph/file/401b18a0e3eca936a4af5.png">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="authcodestyles.css">
   <script src="script.js"></script>
 </head>
@@ -18,6 +13,7 @@
     <div class="mid">
       <img id="logo" src="https://telegra.ph/file/401b18a0e3eca936a4af5.png" width="50px" height="50px" alt="logo">
       <h1>Drive Talk Mm</h1>
+      <p>Google Drive Telegram Bot Developer</p>
     </div>
     <div class="right">
       <button class="btn" role="button" onclick="Channel()">Channel</button>
