--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="container">
     <div class="mid">
-      <img id="logo" src="https://telegra.ph/file/401b18a0e3eca936a4af5.png" width="50px" height="50px" alt="logo">
-      <h1>Drive Talk Mm</h1>
+      <center><img id="logo" src="https://telegra.ph/file/401b18a0e3eca936a4af5.png" width="50px" height="50px" alt="logo">
+      <h1>Drive Talk Mm</h1></center>
       <p>Google Drive Telegram Bot Developer</p>
     </div>
     <div class="right">
