--- a/gdrive-auth.html
+++ b/gdrive-auth.html
@@ -21,7 +21,8 @@
         class="logo">
     <h1>Sign in to the drive talk mm bot</h1>
     <p>Enter the following verification code in bot. This is a credential <b>similar to your password</b> and should not be shared with others.</p>
-    <div id="auth-code-container" style="display: none;">
+    <div>
+        <p>Enter the following verification code in bot. This is a credential <b>similar to your password</b> and should not be shared with others.</p>
         <code class="auth-code"></code>
     </div>
     <button class="copy" aria-live="assertive">Copy</button>
