--- a/privacy.html
+++ b/privacy.html
@@ -11,7 +11,7 @@
 <p>This privacy policy explains how we collect, use, and share information collected from our website (the "Website").</p>
 
 <h2>Information Collected</h2>
-<p>The only information we collect is what is necessary to operate the Website and provide our services. This includes:</p>
+<p>We collect only the information that is necessary to operate the Website and provide our services. This includes:</p>
 <ul>
   <li>Your IP address</li>
   <li>The pages you visit on our Website</li>
@@ -19,20 +19,25 @@
 </ul>
 
 <h2>Use of Information</h2>
-<p>We use the information we collect to improve the Website and provide you with a better user experience. We may also use your information to send you promotional emails or other communications, but you can unsubscribe from these communications at any time.</p>
+<p>We use the collected information to enhance the user experience on our Website. Additionally, we may use this information to send you promotional emails or other communications, but you have the option to unsubscribe from these communications at any time.
 
 <h2>Data Sharing</h2>
-<p>We do not share any of your personal information with third parties without your consent.</p>
+<p>We value your privacy. We do not share any of your personal information with third parties without your explicit consent.
 
 <h2>Security</h2>
-<p>We take appropriate security measures to protect your information from unauthorized access, use, or disclosure.</p>
+<p>Your security is our priority. We have implemented appropriate security measures to safeguard your information from unauthorized access, use, or disclosure.
 
-<h2>Limited Usage of Restricted Scope Data</h2>
+<h2>Usage of Google Data</h2>
+<p>We utilize Google APIs to offer specific features within our app. If you choose to share restricted scope data with us via Google APIs, please be assured that we will use it solely to enhance user-facing features that are prominently displayed within the app's user interface. We do not use your restricted scope data for advertising purposes or sell it to third parties.
 
-<p>We use Google APIs to provide you with certain features of our app. If you choose to share restricted scope data with us through Google APIs, we will only use it to provide or improve user-facing features that are prominent from the requesting app's user interface. We will not use your restricted scope data for advertising or sell it to third parties.</p>
+<p>In certain situations, we may transfer your restricted scope data to others under the following conditions:
+<ul>
+  <li>(a) It is necessary to provide or improve user-facing features prominently visible within the app's user interface.</li>
+  <li>(b) To comply with applicable laws.</li>
+  <li>(c) As part of a merger, acquisition, or sale of assets involving the developer.</li>
+</ul>
 
-<p>We may also transfer your restricted scope data to others if that transfer is (a) necessary to provide or improve user-facing features that are prominent from the requesting app's user interface, (b) to comply with applicable laws, or (c) a part of a merger, acquisition or sale of assets of the developer.</p>
 <h2>Contact Us</h2>
-<p>If you have any questions about how we use your restricted scope data and our privacy policy, please contact us at <b>khainezay54@gmail.com</b>.</p>
+<p>If you have any questions regarding the use of your restricted scope data and our privacy policy, please feel free to contact us at <b>khainezay54@gmail.com</b>.</p>
 </body>
 </html>
