--- a/privacy.html
+++ b/privacy.html
@@ -11,7 +11,7 @@
 <p>This privacy policy explains how we collect, use, and share information collected from our website (the "Website").</p>
 
 <h2>Information Collected</h2>
-<p>We collect only the information that is necessary to operate the Website and provide our services. This includes:</p>
+<p>We collect only the information that is necessary to operate the Website and provide our services. This doesn't includes:</p>
 <ul>
   <li>Your IP address</li>
   <li>The pages you visit on our Website</li>
