--- a/login.html
+++ b/login.html
@@ -13,9 +13,7 @@
     <div class="mid">
       <center><img id="logo" src="https://telegra.ph/file/401b18a0e3eca936a4af5.png" width="50px" height="50px" alt="logo">
       <h1>Drive Talk Mm</h1>
-      <a class="google-login-button btn bg-light d-inline-flex align-items-center" href="/login" style="text-transform:none">
-      <img width="18px" height="18px" style="margin-right:16px" alt="Google sign-in" src="https://telegra.ph/file/136967de1b501659a227d.png" />
-      <span style="padding: 0 18px">Login with Google</span></a></center>
+      </center>
     </div>
     </div>
 </body>
