--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
   <link rel="icon" href="https://telegra.ph/file/401b18a0e3eca936a4af5.png">
   <link rel="stylesheet" href="authcodestyles.css">
   <script src="script.js"></script>
+  <script src="https://apis.google.com/js/platform.js"></script>
 </head>
 <body>
     <div class="container">
@@ -14,6 +15,7 @@
       <center><img id="logo" src="https://telegra.ph/file/401b18a0e3eca936a4af5.png" width="50px" height="50px" alt="logo">
       <h1>Drive Talk Mm</h1>
       </center>
+      <div id="g_id_signin"></div>
     </div>
     </div>
 </body>
