--- a/login.html
+++ b/login.html
@@ -15,8 +15,21 @@
       <center><img id="logo" src="https://telegra.ph/file/401b18a0e3eca936a4af5.png" width="50px" height="50px" alt="logo">
       <h1>Drive Talk Mm</h1>
       </center>
-      <div id="g_id_signin"></div>
+      <div id="g_id_signin" data-client_id="199463681728-8jl16j5urv86g6n7poqj85b02v6irk1e.apps.googleusercontent.com" data-callback="handleCredentialResponse"></div>
     </div>
     </div>
+    <script>
+      function handleCredentialResponse(response) {
+        // Handle the user's login status here.
+      }
+
+      window.onload = function() {
+        gapi.load('auth2', function() {
+          gapi.auth2.init({
+            client_id: '199463681728-8jl16j5urv86g6n7poqj85b02v6irk1e.apps.googleusercontent.com'
+          });
+        });
+      };
+    </script>
 </body>
 </html>
