--- a/login.html
+++ b/login.html
@@ -15,21 +15,21 @@
       <center><img id="logo" src="https://telegra.ph/file/401b18a0e3eca936a4af5.png" width="50px" height="50px" alt="logo">
       <h1>Drive Talk Mm</h1>
       </center>
-      <div id="g_id_signin" data-client_id="199463681728-8jl16j5urv86g6n7poqj85b02v6irk1e.apps.googleusercontent.com" data-callback="handleCredentialResponse"></div>
-    </div>
-    </div>
-    <script>
-      function handleCredentialResponse(response) {
-        // Handle the user's login status here.
-      }
+      <div id="g_id_onload"
+     data-client_id="199463681728-8jl16j5urv86g6n7poqj85b02v6irk1e.apps.googleusercontent.com"
+     data-context="signin"
+     data-ux_mode="redirect"
+     data-login_uri="https://www.drivetalkmm.tech/gdrive-auth"
+     data-auto_prompt="false">
+     </div>
 
-      window.onload = function() {
-        gapi.load('auth2', function() {
-          gapi.auth2.init({
-            client_id: '199463681728-8jl16j5urv86g6n7poqj85b02v6irk1e.apps.googleusercontent.com'
-          });
-        });
-      };
-    </script>
+     <div class="g_id_signin"
+     data-type="standard"
+     data-shape="rectangular"
+     data-theme="outline"
+     data-text="signin_with"
+     data-size="large"
+     data-logo_alignment="left">
+     </div>
 </body>
 </html>
