--- a/login.html
+++ b/login.html
@@ -6,30 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="icon" href="https://telegra.ph/file/401b18a0e3eca936a4af5.png">
   <link rel="stylesheet" href="authcodestyles.css">
-  <script src="script.js"></script>
-  <script src="https://apis.google.com/js/platform.js"></script>
 </head>
 <body>
     <div class="container">
     <div class="mid">
-      <center><img id="logo" src="https://telegra.ph/file/401b18a0e3eca936a4af5.png" width="50px" height="50px" alt="logo">
+      <img id="logo" src="https://telegra.ph/file/401b18a0e3eca936a4af5.png" width="50px" height="50px" alt="logo">
       <h1>Drive Talk Mm</h1>
-      </center>
-      <div id="g_id_onload"
-     data-client_id="199463681728-8jl16j5urv86g6n7poqj85b02v6irk1e.apps.googleusercontent.com"
-     data-context="signin"
-     data-ux_mode="redirect"
-     data-login_uri="https://www.drivetalkmm.tech/gdrive-auth"
-     data-auto_prompt="false">
-     </div>
-
-     <div class="g_id_signin"
-     data-type="standard"
-     data-shape="rectangular"
-     data-theme="outline"
-     data-text="signin_with"
-     data-size="large"
-     data-logo_alignment="left">
-     </div>
+      <a href="/"><img src="login.png"></a>
 </body>
 </html>
