--- a/login.html
+++ b/login.html
@@ -13,6 +13,6 @@
     <div class="mid">
       <img id="logo" src="https://telegra.ph/file/401b18a0e3eca936a4af5.png" width="50px" height="50px" alt="logo">
       <h1>Drive Talk Mm</h1>
-      <a href=url><img src="login.png"></a>
+      <a href="#" id="url"><img src="login.png"></a>
 </body>
 </html>
