--- a/login.html
+++ b/login.html
@@ -14,6 +14,6 @@
       <img id="logo" src="https://telegra.ph/file/401b18a0e3eca936a4af5.png" width="50px" height="50px" alt="logo">
       <h1>Drive Talk Mm</h1>
       <a id="gurl"><img src="login.png"></a>
-      <h1> class="gurl"</h1>
+      <h1 class="gurl"></h1>
 </body>
 </html>
