--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
     <div class="mid">
       <img id="logo" src="https://telegra.ph/file/401b18a0e3eca936a4af5.png" width="50px" height="50px" alt="logo">
       <h1>Drive Talk Mm</h1>
-      <a id="gurl"><img src="login.png"></a>
-      <h1 class="gurl"></h1>
+      <a href="#" id="gurl"><img src="login.png"></a>
+      <code class="gurl"></code>
 </body>
 </html>
