--- a/login.html
+++ b/login.html
@@ -6,14 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="icon" href="https://telegra.ph/file/401b18a0e3eca936a4af5.png">
   <link rel="stylesheet" href="authcodestyles.css">
-  <script src="login.js"></script>
 </head>
 <body>
     <div class="container">
     <div class="mid">
       <img id="logo" src="https://telegra.ph/file/401b18a0e3eca936a4af5.png" width="50px" height="50px" alt="logo">
       <h1>Drive Talk Mm</h1>
-      <a href="#" id="gurl"><img src="login.png"></a>
-      <code class="gurl"></code>
+      <a href="#" id="login_url"><img src="login.png"></a>
+      <code class="login_url"></code>
 </body>
 </html>
