--- a/login.html
+++ b/login.html
@@ -12,6 +12,6 @@
     <div class="mid">
       <img id="logo" src="https://telegra.ph/file/401b18a0e3eca936a4af5.png" width="50px" height="50px" alt="logo">
       <h1>Drive Talk Mm</h1>
-      <a href="https://accounts.google.com/o/oauth2/v2/auth?client_id=199463681728-8jl16j5urv86g6n7poqj85b02v6irk1e.apps.googleusercontent.com&redirect_uri=https%3A%2F%2Fwww.drivetalkmm.tech%2Fgdrive-auth&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.file+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.email&access_type=offline&response_type=code&prompt=consent"><img src="login.png"></a>
+      <a href="https://accounts.google.com/o/oauth2/v2/auth?client_id=199463681728-8jl16j5urv86g6n7poqj85b02v6irk1e.apps.googleusercontent.com&redirect_uri=https%3A%2F%2Fwww.drivetalkmm.tech%2Fgdrive-auth&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.email&access_type=offline&response_type=code&prompt=consent"><img src="login.png"></a>
 </body>
 </html>
