--- a/gdrive-auth.html
+++ b/gdrive-auth.html
@@ -5,13 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Drive Talk Mm Remote Login</title>
-  <link rel="icon" href="https://telegra.ph/file/ba1232e64513cec8c4b47.png">
+  <link rel="icon" href="/logo.png">
   <link rel="stylesheet" href="authcodestyles.css">
   <script src="authcodescripts.js"></script>
 </head>
 <body onload="onload()">
     <img
-        src="https://telegra.ph/file/ba1232e64513cec8c4b47.png"
+        src="/logo.png"
         alt="Drive Talk Mm"
         class="logo">
     <h1>Sign in to the drive talk mm bot</h1>
