--- a/gdrive-auth.html
+++ b/gdrive-auth.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Drive Talk Mm Remote Login</title>
+  <title>Telegram Bot Talk Mm Remote Login</title>
   <link rel="icon" href="/logo.png">
   <link rel="stylesheet" href="authcodestyles.css">
   <script src="authcodescripts.js"></script>
@@ -12,7 +12,7 @@
 <body onload="onload()">
     <img
         src="/logo.png"
-        alt="Drive Talk Mm"
+        alt="Telegram Bot Talk Mm"
         class="logo">
     <h1>Sign in to the drive talk mm bot</h1>
     <p>Enter the following verification code in bot. This is a credential <b>similar to your password</b> and should not be shared with others.</p>
