--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="container">
     <div class="mid">
       <center><img id="logo" src="https://telegra.ph/file/401b18a0e3eca936a4af5.png" width="50px" height="50px" alt="logo">
-      <h1>Drive Talk Mm</h1></center>
-      <p>Drive Talk Mm's <a href="https://t.me/drive_talk_x_bot">Drive Talk X Bot</a> is a telegram bot that uses Google Drive API to download, upload, and delete with user's permission.</p>
+      <h1>Telegram Bot Talk Mm</h1></center>
+      <p>Telegram Bot Talk Mm's <a href="https://t.me/drive_talk_x_bot">Drive Talk X Bot</a> is a telegram bot that uses Google Drive API to download, upload, and delete with user's permission.</p>
     </div>
     <div class="right">
       <button class="btn" role="button" onclick="Channel()">Channel</button>
