--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="https://telegra.ph/file/401b18a0e3eca936a4af5.png">
-  <title>Drive Talk Mm Privacy Policy</title>
+  <title>Telegram Bot Talk Mm Privacy Policy</title>
 </head>
 <body>
 <h1>Privacy Policy</h1>
