--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="icon" href="https://telegra.ph/file/401b18a0e3eca936a4af5.png">
+  <link rel="icon" href="/logo.png">
   <link rel="stylesheet" href="authcodestyles.css">
   <script src="script.js"></script>
 </head>
 <body>
     <div class="container">
     <div class="mid">
-      <center><img id="logo" src="https://telegra.ph/file/401b18a0e3eca936a4af5.png" width="50px" height="50px" alt="logo">
+      <center><img id="logo" src="/logo.png" width="50px" height="50px" alt="logo">
       <h1>Telegram Bot Talk Mm</h1></center>
       <p>Telegram Bot Talk Mm's <a href="https://t.me/drive_talk_x_bot">Drive Talk X Bot</a> is a telegram bot that uses Google Drive API to download, upload, and delete with user's permission.</p>
     </div>
