--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <center><img id="logo" src="/logo.png" width="150px" height="150px" alt="logo">
       <h1>Telegram Bot Talk Mm</h1></center>
       <p>Telegram Bot Talk Mm's <a href="https://t.me/drive_talk_x_bot">Drive Talk X Bot</a> is a telegram bot that uses Google Drive API to download, upload, and delete with user's permission.</p>
+      <button class="btn" role="button" onclick="Login()"><img src=/btn_google_signin_dark_pressed_web.png"></button>
     </div>
     <div class="right">
       <button class="btn" role="button" onclick="Channel()">Channel</button>
