--- a/login.html
+++ b/login.html
@@ -12,9 +12,9 @@
     <div class="container">
     <div class="mid">
       <center><img id="logo" src="/logo.png" width="150px" height="150px" alt="logo">
-      <h1>Telegram Bot Talk Mm</h1></center>
-      <p>Telegram Bot Talk Mm's <a href="https://t.me/drive_talk_x_bot">Drive Talk X Bot</a> is a telegram bot that uses Google Drive API to download, upload, and delete with user's permission.</p>
+      <h1>Telegram Bot Talk Mm</h1>
       <a id="login" onclick="Login()"><img id="loginphoto" src="/btn_google_signin_dark_pressed_web.png"></a>
+      </center>
     </div>
     </div>
 </body>
