--- a/privacy.html
+++ b/privacy.html
@@ -27,7 +27,7 @@
 <h2>Security</h2>
 <p>Your security is our priority. We have implemented appropriate security measures to safeguard your information from unauthorized access, use, or disclosure.
 
-<h2>Usage of Google Data</h2>
+<h2>Limited Usage of Restricted Scope Data</h2>
 <p>We utilize Google APIs to offer specific features within our app. If you choose to share restricted scope data with us via Google APIs, please be assured that we will use it solely to enhance user-facing features that are prominently displayed within the app's user interface. We do not use your restricted scope data for advertising purposes or sell it to third parties.
 
 <p>In certain situations, we may transfer your restricted scope data to others under the following conditions:
