--- a/privacy.html
+++ b/privacy.html
@@ -16,6 +16,7 @@
   <li>Your IP address</li>
   <li>The pages you visit on our Website</li>
   <li>The time and date of your visit</li>
+  <p>For more information, please review the <a href="https://developers.google.com/terms/api-services-user-data-policy">Google API Services User Data Policy</a>.</p>
 </ul>
 
 <h2>Use of Information</h2>
