--- a/privacy.html
+++ b/privacy.html
@@ -16,27 +16,27 @@
   <li>Your IP address</li>
   <li>The pages you visit on our Website</li>
   <li>The time and date of your visit</li>
-  <p>For more information, please review the <a href="https://developers.google.com/terms/api-services-user-data-policy">Google API Services User Data Policy</a>.</p>
 </ul>
 
 <h2>Use of Information</h2>
-<p>We use the collected information to enhance the user experience on our Website. Additionally, we may use this information to send you promotional emails or other communications, but you have the option to unsubscribe from these communications at any time.
+<p>We use the collected information to enhance the user experience on our Website. Additionally, we may use this information to send you promotional emails or other communications, but you have the option to unsubscribe from these communications at any time.</p>
 
 <h2>Data Sharing</h2>
-<p>We value your privacy. We do not share any of your personal information with third parties without your explicit consent.
+<p>We value your privacy. We do not share any of your personal information with third parties without your explicit consent.</p>
 
 <h2>Security</h2>
-<p>Your security is our priority. We have implemented appropriate security measures to safeguard your information from unauthorized access, use, or disclosure.
+<p>Your security is our priority. We have implemented appropriate security measures to safeguard your information from unauthorized access, use, or disclosure.</p>
 
 <h2>Limited Usage of Restricted Scope Data</h2>
-<p>We utilize Google APIs to offer specific features within our app. If you choose to share restricted scope data with us via Google APIs, please be assured that we will use it solely to enhance user-facing features that are prominently displayed within the app's user interface. We do not use your restricted scope data for advertising purposes or sell it to third parties.
+<p>We utilize Google APIs to offer specific features within our app. If you choose to share restricted scope data with us via Google APIs, please be assured that we will use it solely to enhance user-facing features that are prominently displayed within the app's user interface. We do not use your restricted scope data for advertising purposes or sell it to third parties.</p>
 
-<p>In certain situations, we may transfer your restricted scope data to others under the following conditions:
+<p>In certain situations, we may transfer your restricted scope data to others under the following conditions:</p>
 <ul>
   <li>(a) It is necessary to provide or improve user-facing features prominently visible within the app's user interface.</li>
   <li>(b) To comply with applicable laws.</li>
   <li>(c) As part of a merger, acquisition, or sale of assets involving the developer.</li>
 </ul>
+  <p>For more information, please review the <a href="https://developers.google.com/terms/api-services-user-data-policy">Google API Services User Data Policy</a>.</p>
 
 <h2>Contact Us</h2>
 <p>If you have any questions regarding the use of your restricted scope data and our privacy policy, please feel free to contact us at <b>khainezay54@gmail.com</b>.</p>
